appId: com.oen.busmaster
---

- runFlow: ../common/Signin.yaml 
- assertVisible: "Bus Master"
- assertVisible: "Total Revenue"
- assertVisible: "Sell Ticket"
- assertVisible: "Create Trip"
- assertVisible: "Tickets Sold"
- assertVisible: "Recent Trips"

- tapOn:
    id: "ProfileTab"  
- assertVisible: "All Profile"  
- back

- tapOn:
    id: "sellTicketTab"  
- assertVisible: "Available Trips"  

- clearState