appId: com.oen.busmaster
---

- clearState
- launchApp
- tapOn:
    id: 'email'
- inputText: 'test@example.com'
- tapOn:
    id: 'password'
- inputText: 'password123'
- tapOn:
    id: 'showPassword'
- tapOn:
    id: 'signinButton'

